--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,16 @@
-
-
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android-extensions'
     id 'androidx.navigation.safeargs.kotlin'
-
-
 }
 
 android {
-    compileSdk 33
+    compileSdk 32
 
     defaultConfig {
         applicationId "com.example.anmp_w2"
-        minSdk 22
+        minSdk 21
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -37,7 +34,6 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.8.0'
